[gd_scene load_steps=10 format=3 uid="uid://dsjtc3oov25ei"]

[ext_resource type="Script" uid="uid://bn6v7q5j7e7yo" path="res://scenes/input_couch_r_sleep.gd" id="1_17m1p"]
[ext_resource type="FontFile" uid="uid://du2qhjejgfbpx" path="res://assets/fonts/IndieFlower-Regular.ttf" id="2_is2ef"]
[ext_resource type="Texture2D" uid="uid://xy1skntcqxr0" path="res://assets/textLabels/Excelente!.png" id="3_hyydg"]
[ext_resource type="Texture2D" uid="uid://crgn0t6hdlwrf" path="res://assets/furniture/couch_side_r_nice.png" id="4_5pbkr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cfhat"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lit66"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_db1xo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Excelente!:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.0166666, 0.0166666)]
}

[sub_resource type="Animation" id="Animation_2f4ux"]
resource_name = "new_animation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Excelente!:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.0166666, 0.0166666), Vector2(1, 1), Vector2(0.0166666, 0.0166666)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dnxrp"]
_data = {
&"RESET": SubResource("Animation_db1xo"),
&"anim": SubResource("Animation_2f4ux")
}

[node name="input_couchR_sleep" type="Node2D"]
script = ExtResource("1_17m1p")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -964.0
offset_top = -542.5
offset_right = 964.0
offset_bottom = 542.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.403922)
metadata/_edit_use_anchors_ = true

[node name="LineEdit" type="LineEdit" parent="."]
z_index = 2
offset_left = -194.0
offset_top = -260.0
offset_right = -46.0
offset_bottom = -178.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 0)
theme_override_colors/clear_button_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0.482226, 0.741199, 0.984076, 1)
theme_override_fonts/font = ExtResource("2_is2ef")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_cfhat")
theme_override_styles/normal = SubResource("StyleBoxFlat_lit66")
max_length = 1
metadata/_edit_use_anchors_ = true

[node name="LineEdit2" type="LineEdit" parent="."]
z_index = 3
offset_left = 95.0
offset_top = -260.0
offset_right = 243.0
offset_bottom = -178.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 0)
theme_override_colors/clear_button_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0.482226, 0.741199, 0.984076, 1)
theme_override_fonts/font = ExtResource("2_is2ef")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_cfhat")
theme_override_styles/normal = SubResource("StyleBoxFlat_lit66")
max_length = 1
metadata/_edit_use_anchors_ = true

[node name="instruction" type="Label" parent="."]
offset_left = -145.0
offset_top = -260.0
offset_right = -65.0
offset_bottom = -186.0
theme_override_fonts/font = ExtResource("2_is2ef")
theme_override_font_sizes/font_size = 50
text = "l"
metadata/_edit_use_anchors_ = true

[node name="instruction3" type="Label" parent="."]
offset_left = 62.0
offset_top = -260.0
offset_right = 201.0
offset_bottom = -186.0
theme_override_fonts/font = ExtResource("2_is2ef")
theme_override_font_sizes/font_size = 50
text = "s   f√°"
metadata/_edit_use_anchors_ = true

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2(104, -199)
points = PackedVector2Array(30, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 5.0
default_color = Color(0.504511, 0.920221, 1, 1)

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2(-188, -199)
points = PackedVector2Array(30, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 5.0
default_color = Color(0.504511, 0.920221, 1, 1)

[node name="Excelente!" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-11, -24)
scale = Vector2(0.0166666, 0.0166666)
texture = ExtResource("3_hyydg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dnxrp")
}

[node name="CouchSideRNice" type="Sprite2D" parent="."]
position = Vector2(-9, 12)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_5pbkr")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
